// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rating-detail-view renders correctly (isOverviewPage=true) 1`] = `
<div
  className="css-16c40fq-Card"
>
  <div
    className="card-header css-k3h7c1-CardHeader"
  >
    <div
      className="css-1phnlf7-Icon"
      dangerouslySetInnerHTML={
        {
          "__html": {},
        }
      }
    />
    <div
      className="css-17zbm7y-Text"
    >
      rating__labeled_count
    </div>
    <div
      className="css-1ut7gm9-RatingDetailHeader"
    >
      <button
        className="css-1cywa3f-Button"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
      <button
        className="css-1cywa3f-Button"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
  <div
    className="card-content css-1kceaqr-CardContent"
  >
    <div
      className="css-afaif4-RatingDetailView"
    >
      <div
        className="css-1d2tndp-Heading"
      >
        Fragebogen der Marktforschung
      </div>
      <div
        className="css-1e4yjc9-Text"
      >
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.
      </div>
      <div
        className="rating-content css-z5r6dl-RatingDetailView"
      />
    </div>
  </div>
  <div
    className="card-footer css-1uma7zq-CardFooter"
  >
    <div
      className="css-1ck0okw-RatingDetailFooter"
    >
      <div
        className="css-icd26n-RatingDetailFooter"
      >
        <div
          className="css-17zbm7y-Text"
        >
          rating__rating__rating_global_score
        </div>
        <div
          className="css-3c95an-RatingDetailFooter"
        >
          <div
            className="css-1ng6r77-Text"
          >
            rating__rating__scoring
          </div>
          <div
            className="css-l0jg45-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </div>
      <div
        className="css-ujroht-ProgressBar"
      >
        <div
          className="progress-element css-zcdupw-ProgressBar"
        />
      </div>
    </div>
    <div
      className="css-1dsw8ki-RatingDetailFooter"
    >
      <button
        className="css-1cywa3f-Button"
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
      <button
        className="css-1cywa3f-Button"
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`rating-detail-view renders correctly (question navigation) 1`] = `
<div
  className="css-16c40fq-Card"
>
  <div
    className="card-header css-k3h7c1-CardHeader"
  >
    <div
      className="css-1phnlf7-Icon"
      dangerouslySetInnerHTML={
        {
          "__html": {},
        }
      }
    />
    <div
      className="css-17zbm7y-Text"
    >
      rating__labeled_count
    </div>
    <div
      className="css-1ut7gm9-RatingDetailHeader"
    >
      <button
        className="css-1cywa3f-Button"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
      <button
        className="css-1cywa3f-Button"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
  <div
    className="card-content css-1kceaqr-CardContent"
  >
    <div
      className="css-afaif4-RatingDetailView"
    >
      <div
        className="css-1d2tndp-Heading"
      >
        Fragebogen der Marktforschung
      </div>
      <div
        className="css-1e4yjc9-Text"
      >
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.
      </div>
      <div
        className="rating-content css-z5r6dl-RatingDetailView"
      />
    </div>
  </div>
  <div
    className="card-footer css-1uma7zq-CardFooter"
  >
    <div
      className="css-1ck0okw-RatingDetailFooter"
    >
      <div
        className="css-icd26n-RatingDetailFooter"
      >
        <div
          className="css-17zbm7y-Text"
        >
          rating__rating__rating_score
        </div>
        <div
          className="css-3c95an-RatingDetailFooter"
        >
          <div
            className="css-1ng6r77-Text"
          >
            rating__rating__scoring
          </div>
          <div
            className="css-l0jg45-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </div>
      <div
        className="css-ujroht-ProgressBar"
      >
        <div
          className="progress-element css-zcdupw-ProgressBar"
        />
      </div>
    </div>
    <div
      className="css-1dsw8ki-RatingDetailFooter"
    >
      <button
        className="css-1cywa3f-Button"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
      <button
        className="css-1cywa3f-Button"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`rating-detail-view renders correctly (requiresScoring=true) 1`] = `
<div
  className="css-16c40fq-Card"
>
  <div
    className="card-header css-k3h7c1-CardHeader"
  >
    <div
      className="css-1phnlf7-Icon"
      dangerouslySetInnerHTML={
        {
          "__html": {},
        }
      }
    />
    <div
      className="css-17zbm7y-Text"
    >
      rating__labeled_count
    </div>
    <div
      className="css-1ut7gm9-RatingDetailHeader"
    >
      <button
        className="css-1cywa3f-Button"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
      <button
        className="css-1cywa3f-Button"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
  <div
    className="card-content css-1kceaqr-CardContent"
  >
    <div
      className="css-afaif4-RatingDetailView"
    >
      <div
        className="css-1d2tndp-Heading"
      >
        Fragebogen der Marktforschung
      </div>
      <div
        className="css-1e4yjc9-Text"
      >
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.
      </div>
      <div
        className="rating-content css-z5r6dl-RatingDetailView"
      />
    </div>
  </div>
  <div
    className="card-footer css-1uma7zq-CardFooter"
  >
    <div
      className="css-1ck0okw-RatingDetailFooter"
    >
      <div
        className="css-icd26n-RatingDetailFooter"
      >
        <div
          className="css-17zbm7y-Text"
        >
          rating__rating__rating_score
        </div>
        <div
          className="css-3c95an-RatingDetailFooter"
        >
          <div
            className="css-dtunoo-Text"
          >
            rating__rating__scoring
          </div>
          <div
            className="css-1nfczpt-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </div>
      <div
        className="css-ujroht-ProgressBar"
      >
        <div
          className="progress-element css-zcdupw-ProgressBar"
        />
      </div>
    </div>
    <div
      className="css-1dsw8ki-RatingDetailFooter"
    >
      <button
        className="css-1cywa3f-Button"
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
      <button
        className="css-1cywa3f-Button"
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`rating-detail-view renders correctly 1`] = `
<div
  className="css-16c40fq-Card"
>
  <div
    className="card-header css-k3h7c1-CardHeader"
  >
    <div
      className="css-1phnlf7-Icon"
      dangerouslySetInnerHTML={
        {
          "__html": {},
        }
      }
    />
    <div
      className="css-17zbm7y-Text"
    >
      rating__labeled_count
    </div>
    <div
      className="css-1ut7gm9-RatingDetailHeader"
    >
      <button
        className="css-1cywa3f-Button"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
      <button
        className="css-1cywa3f-Button"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
  <div
    className="card-content css-1kceaqr-CardContent"
  >
    <div
      className="css-afaif4-RatingDetailView"
    >
      <div
        className="css-1d2tndp-Heading"
      >
        Fragebogen der Marktforschung
      </div>
      <div
        className="css-1e4yjc9-Text"
      >
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.
      </div>
      <div
        className="rating-content css-z5r6dl-RatingDetailView"
      />
    </div>
  </div>
  <div
    className="card-footer css-1uma7zq-CardFooter"
  >
    <div
      className="css-1ck0okw-RatingDetailFooter"
    >
      <div
        className="css-icd26n-RatingDetailFooter"
      >
        <div
          className="css-17zbm7y-Text"
        >
          rating__rating__rating_score
        </div>
        <div
          className="css-3c95an-RatingDetailFooter"
        >
          <div
            className="css-1ng6r77-Text"
          >
            rating__rating__scoring
          </div>
          <div
            className="css-l0jg45-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </div>
      <div
        className="css-ujroht-ProgressBar"
      >
        <div
          className="progress-element css-zcdupw-ProgressBar"
        />
      </div>
    </div>
    <div
      className="css-1dsw8ki-RatingDetailFooter"
    >
      <button
        className="css-1cywa3f-Button"
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
      <button
        className="css-1cywa3f-Button"
        disabled={true}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          <div
            className="css-mj8vo1-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;
